#103 Fixed map center setting alignment

--- a/static/css/settings/map.css
+++ b/static/css/settings/map.css
@@ -1,5 +1,6 @@
 /* Map center */
 .map-center > div {
+	margin-left: auto;
 	width: inherit;
 	display: flex;
 }
